2005-02-19  Richard Hult  <richard@imendio.com>

	* src/planner-main.c: (main):
	* src/planner-task-tree.c: Disable dnd to get rid of warning from treeview.
	* src/planner-ttable-tree.c: Likewise.
	* src/planner-window.c: (window_class_init), (window_init),
	(planner_window_open_recent_cb), (window_open_cb),
	(uri_list_extract_uris), (window_drag_data_received_cb),
	(planner_window_new), (planner_window_open),
	(planner_window_open_in_existing_or_new), (window_get_name):
	* src/planner-window.h: Fix bug #139645, open files by
	dragndrop. Refactor the opening code so it can be shared, and use
	it for the added support for opening multiple files from the
	commandline or filechooser.

	* src/planner-window.c (window_drag_data_received_cb) 
	(window_init): Setup drop target for planner files.

2005-02-18  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (task_tree_add_column): Set sizing to
	fixed for name column. Fixes bug #151780.

	* src/planner-resource-view.c (resource_view_setup_tree_view):
	Likewise for name and short name.

	* data/glade/task-dialog.glade: Change the work/duration
	spinbuttons to entries.
	
	* src/planner-format.c: (planner_format_duration_with_day_length),
	(planner_format_duration): Move here from the task tree and make
	more general.
 
	* src/planner-gantt-print.c:
	* src/planner-gantt-row.c:
	* src/planner-project-properties.c:
	* src/planner-resource-view.c:
	* src/planner-task-tree.c:
	* src/planner-ttable-row.c: Update for the above change.

	* src/planner-task-dialog.c: Change the work/duration spinbuttons
	to entries and add duration parsing like the tree views has.
	
2005-02-18  Richard Hult  <richard@imendio.com>

	* src/planner-sql-plugin.c (check_database_tables): Don't g_free,
	g_object_unref.

	* configure.in: Bump version for a pre-release.

	* src/planner-task-tree.c: (task_cmd_move_undo), (task_cmd_move):
	Restore the task type of the parent on undo.
	(task_cmd_move): Initialize variable.
